--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="TextUtils is website where you can manipulate your text in the way you want."
+      content="TextUtils is word counter and character counter website where you can manipulate your text in the way you want. You can remove extra spaces , copy the manipulated text as well as you can convert Upper Case to lower case And Lower case to Upper Case"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon-16x16.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>TextUtils</title>
+    <title>TextUtils - Word Counter | Character Counter | UpperCase to LowerCase |lowercase to UpperCase</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
